tests/error/concat_type.src
.IPPcode18
defvar GF@a
defvar GF@b
move GF@a string@abc
concat GF@a GF@a int@5